# Detent

./: .gitignore  BEDROCK.md  LAW.md  NOTICE  README.md  _dispatch_shim.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: admin.yml  release.yml
commands/: detent.md  lever.md
detent/: __init__.py  __main__.py  cells.py  contract.py  dispatch.py  facts.py  moves.py  store.py
hooks/: dispatch.sh  hooks.json
lever/: __init__.py  __main__.py  cells.py  contract.py  dispatch.py  facts.py  moves.py  store.py
tests/: test_laws.py  test_smoke.py
