[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lever"
version = "0.1.0"
description = "A strictly passive, deterministic leverage layer for coding agents"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["lever*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
